feat: sync bridge-biglot with TSP logic, fix frontend Supabase data fetching
- Updated bridge-biglot/main.py to match TSP-Competition logic
  - Added open position filtering (open_pids)
  - Added volume-weighted points calculation
  - Added max_consecutive_wins/losses tracking
  - Fixed UTC offset handling (hardcoded -10800)
- Synced core.py with TSP version
- Fixed frontend +page.server.ts to remove avatar_url query
- Added debug logging for Supabase fetch troubleshooting
- Created schema.sql for database reference

--- a/bridge-biglot/.env.example
+++ b/bridge-biglot/.env.example
@@ -6,6 +6,7 @@ SUPABASE_KEY=your_supabase_service_role_key
 MT5_PATH=C:/Program Files/MetaTrader 5/terminal64.exe
 SYNC_INTERVAL=60
 MARKET_DATA_SYNC_INTERVAL=60
+UTC_OFFSET=-10800  # -10800 for UTC+3, -7200 for UTC+2, etc.
 
 # Telegram Notifications (Optional)
 TELEGRAM_BOT_TOKEN=your_bot_token
