--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "dependencies": {
         "@google/generative-ai": "^0.24.1",
         "@supabase/supabase-js": "^2.86.0",
+        "axios": "^1.13.2",
+        "big.js": "^7.0.1",
+        "cheerio": "^1.1.2",
         "lightweight-charts": "^5.0.0",
         "marked": "^17.0.1",
-        "openai": "^6.10.0"
+        "openai": "^6.10.0",
+        "puppeteer": "^24.35.0"
     }
 }
