--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@sveltejs/kit": "^2.48.5",
         "@sveltejs/vite-plugin-svelte": "^6.2.1",
         "autoprefixer": "^10.4.20",
+        "puppeteer": "^24.35.0",
         "svelte": "^5.43.8",
         "svelte-check": "^4.3.4",
         "tailwindcss": "^3.4.9",
@@ -24,6 +25,7 @@
     },
     "dependencies": {
         "@google/generative-ai": "^0.24.1",
+        "@sparticuz/chromium": "^143.0.4",
         "@supabase/supabase-js": "^2.86.0",
         "axios": "^1.13.2",
         "big.js": "^7.0.1",
@@ -31,6 +33,6 @@
         "lightweight-charts": "^5.0.0",
         "marked": "^17.0.1",
         "openai": "^6.10.0",
-        "puppeteer": "^24.35.0"
+        "puppeteer-core": "^24.35.0"
     }
 }
