--- a/package.json
+++ b/package.json
@@ -27,12 +27,19 @@
         "@google/generative-ai": "^0.24.1",
         "@sparticuz/chromium": "^143.0.4",
         "@supabase/supabase-js": "^2.86.0",
+        "@threlte/core": "^8.3.1",
+        "@threlte/extras": "^9.7.1",
+        "@types/three": "^0.182.0",
         "axios": "^1.13.2",
         "big.js": "^7.0.1",
         "cheerio": "^1.1.2",
         "lightweight-charts": "^5.0.0",
         "marked": "^17.0.1",
         "openai": "^6.10.0",
-        "puppeteer-core": "^24.35.0"
+        "puppeteer-core": "^24.35.0",
+        "three": "^0.182.0"
+    },
+    "optionalDependencies": {
+        "@rollup/rollup-darwin-x64": "^4.55.3"
     }
 }
